# creating-an-open-source-project-in-python-3085072

./: README.md
after/: .pre-commit-config.yaml  LICENSE  README.md  coverage.xml  pyproject.toml  reminder.py  tests.py  tox.ini
after/.github/workflows/: check.yml
after/workflows/: check.yml
before/: pyproject.toml  reminder.p  reminder.py  tests.py  tox.ini
