[tool.poetry]
name = "os_in_python"
version = "0.1.0"
description = "This is my 1st Python project"
authors = ["Cheukting <cheukting.ho@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
