[tool.poetry]
name = "reminder"
version = "0.1.0"
description = "This is my 1st Python project"
authors = ["Cheukting <cheukting.ho@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
click = "^8.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
tox = "^3.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
